--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Глэйси</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -88,17 +91,17 @@
   <section class="slider">
     <h2 class="visually-hidden">Витрина мороженного</h2>
     <div class="slider-current">
-      <h3>Крем-брюле и пломбир с малиновым джемом</h3>
+      <h3 class="slide-title">Крем-брюле и пломбир с малиновым джемом</h3>
       <img src="img/slider-1.png" width="1045" height="881" alt="Крем-брюле и пломбир с малиновым джемом">
       <a class="button slider-button" href="#">Давайте оба!</a>
     </div>
     <div class="slider-current">
-      <h3>Шоколадный пломбир и лимонный сорбет</h3>
+      <h3 class="slide-title">Шоколадный пломбир и лимонный сорбет</h3>
       <img src="img/slider-2.png" width="1045" height="881" alt="Шоколадный пломбир и лимонный сорбет">
       <a class="button slider-button" href="#">Давайте оба!</a>
     </div>
     <div class="slider-current">
-      <h3>Пломбир с помадкой и клубничный щербет</h3>
+      <h3 class="slide-title">Пломбир с помадкой и клубничный щербет</h3>
       <img src="img/slider-3.png" width="1045" height="881" alt="Пломбир с помадкой и клубничный щербет">
       <a class="button slider-button" href="#">Давайте оба!</a>
     </div>
@@ -238,26 +241,18 @@
         </li>
       </ul>
     </div>
-    <ul class="footer-links-list">
-      <li class="footer-links-left">
-        <ul class="footer-left-info">
-          <li>
-            <a class="footer-link-information" href="#">Для поставщиков</a>
-          </li>
-          <li>
-            <a class="footer-link-information" href="#">О производстве</a>
-          </li>
-        </ul>
+    <ul class="footer-information-list">
+      <li>
+        <a class="footer-link-information" href="#">Для поставщиков</a>
       </li>
-      <li class="footer-links-right">
-        <ul class="footer-right-info">
-          <li>
-            <a class="footer-link-information" href="#">Наши документы</a>
-          </li>
-          <li>
-            <a class="footer-link-information" href="#">Экологические стандарты</a>
-          </li>
-        </ul>
+      <li>
+        <a class="footer-link-information" href="#">О производстве</a>
+      </li>
+      <li>
+        <a class="footer-link-information" href="#">Наши документы</a>
+      </li>
+      <li>
+        <a class="footer-link-information" href="#">Экологические стандарты</a>
       </li>
     </ul>
     <p class="footer-copyright">
