--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>Каталог Глейси</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -119,7 +122,7 @@
     </div>
   </header>
   <main class="container">
-    <h1>Сливочное мороженое</h1>
+    <!-- <h1>Сливочное мороженое</h1> -->
     <ul class="breadcrumbs">
       <li>
         <a href="index.html">Главная</a>
@@ -130,6 +133,7 @@
       <li class="breadcrumbs-current-page">Сливочное мороженое</li>
     </ul>
     <section class="filters">
+        <h1>Сливочное мороженое</h1>
       <h2 class="visually-hidden">Фильтры мороженого</h2>
       <form class="filter" method="get" action="https://echo.htmlacademy.ru">
         <fieldset class="sort">
