--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Глэйси</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
@@ -116,15 +115,15 @@
     <h1 class="visually-hidden">Магазин "Глэйси"</h1>
     <section class="deals">
       <h2 class="visually-hidden">Акции магазина</h2>
-      <div class="deals-item-1">
+      <div class="deals-item-raspberry">
         <h3>Малинка даром!</h3>
         <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-        <a class="button" href="catalog.html">Хочу варенье!</a>
+        <a class="deals-button" href="catalog.html">Хочу варенье!</a>
       </div>
-      <div class="deals-item-2">
+      <div class="deals-item-chocolate">
         <h3>Шоколадки даром!</h3>
         <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-        <a class="button" href="catalog.html">Хочу шоколадки!</a>
+        <a class="deals-button" href="catalog.html">Хочу шоколадки!</a>
       </div>
     </section>
     <section class="popular-offers">
@@ -209,15 +208,15 @@
           Адрес главного офиса
           <br> и офлайн магазина:
           <br>
-          <b>ул.Большая Конюшенная</b>
+          <b class="address-details">ул.Большая Конюшенная</b>
           <br>
-          <b>19/8, Санкт-Петербург</b>
+          <b class="address-details">19/8, Санкт-Петербург</b>
           <br>
         </p>
         <p>
           Для заказов по телефону:
           <br>
-          <b>8 812 450-24-25</b>
+          <b class="address-details">8 812 450-24-25</b>
           <br> (с 10 до 20 ежедневно)
         </p>
         <a class="button-feedback" href="index.html">Форма обратной связи</a>
