--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
   <link href="css/style.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="body-index">
+    <div class="site-wrapper">
   <header class="main-header">
     <div class="main-header-logo">
       <img src="img/logo.svg" width="154" height="64" alt="Логотип магазина">
     </div>
     <nav class="main-navigation">
       <ul class="site-navigation">
-        <li class="site-navigation">
+        <li class="site-navigation-sub">
           <a href="catalog.html">Каталог</a>
           <ul class="site-navigation-list">
             <li class="site-navigation-list-item">
@@ -279,6 +280,7 @@
       </fieldset>
       <button class="feedback-btn">Отправить</button>
     </form>
+  </div>
   </div>
 </body>
 
