--- a/catalog.html
+++ b/catalog.html
@@ -11,9 +11,11 @@
 <body class="body-catalog">
   <div class="catalog-wrapper">
     <header class="main-header">
+        <div class="main-header-logo">
       <a href="index.html">
         <img src="img/logo.svg" width="154" height="64" alt="Логотип магазина">
       </a>
+      </div>
       <nav class="main-navigation">
         <ul class="site-navigation">
           <li class="site-navigation-current">
@@ -46,6 +48,7 @@
           </li>
         </ul>
       </nav>
+      <div>
       <ul class="user-navigation">
         <li>
           <a class="header-btn-search" href="#">
@@ -81,7 +84,7 @@
             <span class="visually-hidden">Корзина</span>
             <span class="btn-basket-text-full">2 товара</span>
           </a>
-          <section class="basket container">
+          <section class="basket-container">
             <h2 class="visually-hidden">Список товаров в корзине</h2>
             <table class="basket-list">
               <tr>
@@ -120,6 +123,7 @@
         <p class="opening-hours">С 10 до 20, ежедневно</p>
         <a class="phone-number" href="tel:+78124502525">8 812 450-25-25</a>
       </div>
+    </div>
     </header>
     <main class="container">
       <ul class="breadcrumbs">
@@ -190,7 +194,7 @@
             <span class="item-price">310</span>
             <span class="item-weight">/кг</span>
             <a href="catalog.html">
-              <h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
+              <h3 class="offers-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
             </a>
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
@@ -199,7 +203,7 @@
             <span class="item-price">380</span>
             <span class="item-weight">/кг</span>
             <a href="catalog.html">
-              <h3>Сливочно-кофейное с кусочками шоколада</h3>
+              <h3 class="offers-title">Сливочно-кофейное с кусочками шоколада</h3>
             </a>
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
@@ -208,7 +212,7 @@
             <span class="item-price">355</span>
             <span class="item-weight">/кг</span>
             <a href="catalog.html">
-              <h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
+              <h3 class="offers-title">Сливочно-клубничное с присыпкой из белого шоколада</h3>
             </a>
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
@@ -217,7 +221,7 @@
             <span class="item-price">415</span>
             <span class="item-weight">/кг</span>
             <a href="catalog.html">
-              <h3>Сливочное крем-брюле с карамельной подливкой</h3>
+              <h3 class="offers-title">Сливочное крем-брюле с карамельной подливкой</h3>
             </a>
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
@@ -226,7 +230,7 @@
             <span class="item-price">325</span>
             <span class="item-weight">/кг</span>
             <a href="catalog.html">
-              <h3>Сливочное с брусничным джемом</h3>
+              <h3 class="offers-title">Сливочное с брусничным джемом</h3>
             </a>
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
@@ -235,7 +239,7 @@
             <span class="item-price">410</span>
             <span class="item-weight">/кг</span>
             <a href="catalog.html">
-              <h3>Сливочно-черничное с цельными ягодами черники</h3>
+              <h3 class="offers-title">Сливочно-черничное с цельными ягодами черники</h3>
             </a>
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
@@ -244,7 +248,7 @@
             <span class="item-price">375</span>
             <span class="item-weight">/кг</span>
             <a href="catalog.html">
-              <h3>Сливочно-лимонное с карамельной присыпкой</h3>
+              <h3 class="offers-title">Сливочно-лимонное с карамельной присыпкой</h3>
             </a>
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
@@ -253,7 +257,7 @@
             <span class="item-price">320</span>
             <span class="item-weight">/кг</span>
             <a href="catalog.html">
-              <h3>Сливочное с шоколадной стружкой</h3>
+              <h3 class="offers-title">Сливочное с шоколадной стружкой</h3>
             </a>
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
@@ -262,7 +266,7 @@
             <span class="item-price">440</span>
             <span class="item-weight">/кг</span>
             <a href="catalog.html">
-              <h3>Сливочно-ванильное с кусочками шоколада</h3>
+              <h3 class="offers-title">Сливочно-ванильное с кусочками шоколада</h3>
             </a>
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
@@ -271,7 +275,7 @@
             <span class="item-price">435</span>
             <span class="item-weight">/кг</span>
             <a href="catalog.html">
-              <h3>Сливочноe с ментоловым сиропом</h3>
+              <h3 class="offers-title">Сливочноe с ментоловым сиропом</h3>
             </a>
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
@@ -280,7 +284,7 @@
             <span class="item-price">420</span>
             <span class="item-weight">/кг</span>
             <a href="catalog.html">
-              <h3>Сливочное с кусочками черного шоколада</h3>
+              <h3 class="offers-title">Сливочное с кусочками черного шоколада</h3>
             </a>
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
@@ -289,7 +293,7 @@
             <span class="item-price">355</span>
             <span class="item-weight">/кг</span>
             <a href="catalog.html">
-              <h3>Сливочное с мятным сиропом</h3>
+              <h3 class="offers-title">Сливочное с мятным сиропом</h3>
             </a>
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
