--- a/catalog.html
+++ b/catalog.html
@@ -11,10 +11,10 @@
 <body class="body-catalog">
   <div class="catalog-wrapper">
     <header class="main-header">
-        <div class="main-header-logo">
-      <a href="index.html">
-        <img src="img/logo.svg" width="154" height="64" alt="Логотип магазина">
-      </a>
+      <div class="main-header-logo">
+        <a href="index.html">
+          <img src="img/logo.svg" width="154" height="64" alt="Логотип магазина">
+        </a>
       </div>
       <nav class="main-navigation">
         <ul class="site-navigation">
@@ -49,81 +49,81 @@
         </ul>
       </nav>
       <div>
-      <ul class="user-navigation">
-        <li>
-          <a class="header-btn-search" href="#">
-            <span class="visually-hidden">Поиск</span>
-          </a>
-          <form class="user-navigation modal-search" action="https://echo.htmlacademy.ru" method="post">
-            <label class="visually-hidden" for="input-search">Поиск по сайту</label>
-            <input class="user-navigation-input" type="search" name="search" id="input-search" placeholder="Что ищем?" tabindex="0">
-          </form>
-        </li>
-        <li>
-          <a class="login-link" href="#">Вход</a>
-          <form class="user-navigation-login" action="https://echo.htmlacademy.ru" method="post">
-            <fieldset>
-              <label class="visually-hidden" for="entry-email">Электронная почта</label>
-              <input class="user-navigation-input" type="email" name="email" id="entry-email" placeholder="Электронная почта" tabindex="0"
-                required>
-            </fieldset>
-            <fieldset>
-              <label class="visually-hidden" for="entry-password">Пароль</label>
-              <input class="user-navigation-input" type="password" name="password" id="entry-password" placeholder="Пароль" tabindex="0"
-                required>
-            </fieldset>
-            <button class="button-enter">Войти</button>
-            <p class="user-navigation-links">
-              <a href="#">Забыли пароль?</a>
-              <a href="#">Новая регистрация</a>
-            </p>
-          </form>
-        </li>
-        <li>
-          <a class="header-btn-basket-full" href="#">
-            <span class="visually-hidden">Корзина</span>
-            <span class="btn-basket-text-full">2 товара</span>
-          </a>
-          <section class="basket-container">
-            <h2 class="visually-hidden">Список товаров в корзине</h2>
-            <table class="basket-list">
-              <tr>
-                <td class="basket-item">
-                  <h3 class="basket-item-title">Пломбир с апельсиновым джемом</h3>
-                  <button class="button" type="button">Удалить товар</button>
-                  <img class="basket-item-img" src="img/item-1.jpg" width="33" height="33" alt="Пломбир с апельсиновым джемом">
-                </td>
-                <td class="basket-item">1,5 кг ×
-                  <span class="basket-item-price">200 руб.</span>
-                </td>
-                <td class="basket-item">300 руб.</td>
-              </tr>
-              <tr>
-                <td class="basket-item">
-                  <h3 class="basket-item-title">Клубничный пломбир с присыпкой из белого шоколада</h3>
-                  <button class="button" type="button">Удалить товар</button>
-                  <img class="basket-item-img" src="img/item-3.jpg" width="33" height="33" alt="Клубничный пломбир с присыпкой из белого шоколада">
-                </td>
-                <td class="basket-item">1,5 кг ×
-                  <span class="basket-item-price">300 руб.</span>
-                </td>
-                <td class="basket-item">450 руб.</td>
-              </tr>
-              <tr>
-                <td class="basket-item" colspan="3">
-                  <b>Итого: 750 руб.</b>
-                </td>
-              </tr>
-            </table>
-            <a class="complete-btn" href="#">Оформить заказ</a>
-          </section>
-        </li>
-      </ul>
-      <div class="page-header-info">
-        <p class="opening-hours">С 10 до 20, ежедневно</p>
-        <a class="phone-number" href="tel:+78124502525">8 812 450-25-25</a>
+        <ul class="user-navigation">
+          <li>
+            <a class="header-btn-search" href="#">
+              <span class="visually-hidden">Поиск</span>
+            </a>
+            <form class="user-navigation modal-search" action="https://echo.htmlacademy.ru" method="post">
+              <label class="visually-hidden" for="input-search">Поиск по сайту</label>
+              <input class="user-navigation-input" type="search" name="search" id="input-search" placeholder="Что ищем?" tabindex="0">
+            </form>
+          </li>
+          <li>
+            <a class="login-link" href="#">Вход</a>
+            <form class="user-navigation-login" action="https://echo.htmlacademy.ru" method="post">
+              <fieldset>
+                <label class="visually-hidden" for="entry-email">Электронная почта</label>
+                <input class="user-navigation-input" type="email" name="email" id="entry-email" placeholder="Электронная почта" tabindex="0"
+                  required>
+              </fieldset>
+              <fieldset>
+                <label class="visually-hidden" for="entry-password">Пароль</label>
+                <input class="user-navigation-input" type="password" name="password" id="entry-password" placeholder="Пароль" tabindex="0"
+                  required>
+              </fieldset>
+              <button class="button-enter">Войти</button>
+              <p class="user-navigation-links">
+                <a href="#">Забыли пароль?</a>
+                <a href="#">Новая регистрация</a>
+              </p>
+            </form>
+          </li>
+          <li>
+            <a class="header-btn-basket-full" href="#">
+              <span class="visually-hidden">Корзина</span>
+              <span class="btn-basket-text-full">2 товара</span>
+            </a>
+            <section class="basket-container">
+              <h2 class="visually-hidden">Список товаров в корзине</h2>
+              <table class="basket-list">
+                <tr>
+                  <td class="basket-item">
+                    <h3 class="basket-item-title">Пломбир с апельсиновым джемом</h3>
+                    <button class="button" type="button">Удалить товар</button>
+                    <img class="basket-item-img" src="img/item-1.jpg" width="33" height="33" alt="Пломбир с апельсиновым джемом">
+                  </td>
+                  <td class="basket-item">1,5 кг ×
+                    <span class="basket-item-price">200 руб.</span>
+                  </td>
+                  <td class="basket-item">300 руб.</td>
+                </tr>
+                <tr>
+                  <td class="basket-item">
+                    <h3 class="basket-item-title">Клубничный пломбир с присыпкой из белого шоколада</h3>
+                    <button class="button" type="button">Удалить товар</button>
+                    <img class="basket-item-img" src="img/item-3.jpg" width="33" height="33" alt="Клубничный пломбир с присыпкой из белого шоколада">
+                  </td>
+                  <td class="basket-item">1,5 кг ×
+                    <span class="basket-item-price">300 руб.</span>
+                  </td>
+                  <td class="basket-item">450 руб.</td>
+                </tr>
+                <tr>
+                  <td class="basket-item" colspan="3">
+                    <b>Итого: 750 руб.</b>
+                  </td>
+                </tr>
+              </table>
+              <a class="complete-btn" href="#">Оформить заказ</a>
+            </section>
+          </li>
+        </ul>
+        <div class="page-header-info">
+          <p class="opening-hours">С 10 до 20, ежедневно</p>
+          <a class="phone-number" href="tel:+78124502525">8 812 450-25-25</a>
+        </div>
       </div>
-    </div>
     </header>
     <main class="container">
       <ul class="breadcrumbs">
@@ -191,110 +191,136 @@
         <ul class="offers-list">
           <li class="offers-item">
             <img src="img/item-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-            <span class="item-price">310</span>
-            <span class="item-weight">/кг</span>
-            <a href="catalog.html">
-              <h3 class="offers-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
-            </a>
+            <div class="catalog-list-item-price">
+              <span class="item-price">310</span>
+              <span class="item-weight">/кг</span>
+            </div>
+            <h3 class="offers-title">
+              <a href="catalog.html">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+            </h3>
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
             <img src="img/item-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
-            <span class="item-price">380</span>
-            <span class="item-weight">/кг</span>
-            <a href="catalog.html">
-              <h3 class="offers-title">Сливочно-кофейное с кусочками шоколада</h3>
-            </a>
+            <div class="catalog-list-item-price">
+              <span class="item-price">380</span>
+              <span class="item-weight">/кг</span>
+            </div>
+            <h3 class="offers-title">
+              <a href="catalog.html">Сливочно-кофейное с кусочками шоколада</a>
+            </h3>
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
             <img src="img/item-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-            <span class="item-price">355</span>
-            <span class="item-weight">/кг</span>
-            <a href="catalog.html">
-              <h3 class="offers-title">Сливочно-клубничное с присыпкой из белого шоколада</h3>
-            </a>
+            <div class="catalog-list-item-price">
+              <span class="item-price">355</span>
+              <span class="item-weight">/кг</span>
+            </div>
+            <h3 class="offers-title">
+              <a href="catalog.html">Сливочно-клубничное с присыпкой из белого шоколада</a>
+            </h3>
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
             <img src="img/item-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
-            <span class="item-price">415</span>
-            <span class="item-weight">/кг</span>
-            <a href="catalog.html">
-              <h3 class="offers-title">Сливочное крем-брюле с карамельной подливкой</h3>
-            </a>
+            <div class="catalog-list-item-price">
+              <span class="item-price">415</span>
+              <span class="item-weight">/кг</span>
+            </div>
+            <h3 class="offers-title">
+              <a href="catalog.html">Сливочное крем-брюле с карамельной подливкой</a>
+            </h3>
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
             <img src="img/item-5.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
-            <span class="item-price">325</span>
-            <span class="item-weight">/кг</span>
-            <a href="catalog.html">
-              <h3 class="offers-title">Сливочное с брусничным джемом</h3>
-            </a>
+            <div class="catalog-list-item-price">
+              <span class="item-price">325</span>
+              <span class="item-weight">/кг</span>
+            </div>
+            <h3 class="offers-title">
+              <a href="catalog.html">Сливочное с брусничным джемом</a>
+            </h3>
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
             <img src="img/item-6.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
-            <span class="item-price">410</span>
-            <span class="item-weight">/кг</span>
-            <a href="catalog.html">
-              <h3 class="offers-title">Сливочно-черничное с цельными ягодами черники</h3>
-            </a>
+            <div class="catalog-list-item-price">
+              <span class="item-price">410</span>
+              <span class="item-weight">/кг</span>
+            </div>
+            <h3 class="offers-title">
+              <a href="catalog.html">Сливочно-черничное с цельными ягодами черники</a>
+            </h3>
+
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
             <img src="img/item-7.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
-            <span class="item-price">375</span>
-            <span class="item-weight">/кг</span>
-            <a href="catalog.html">
-              <h3 class="offers-title">Сливочно-лимонное с карамельной присыпкой</h3>
-            </a>
+            <div class="catalog-list-item-price">
+              <span class="item-price">375</span>
+              <span class="item-weight">/кг</span>
+            </div>
+            <h3 class="offers-title">
+              <a href="catalog.html">Сливочно-лимонное с карамельной присыпкой</a>
+            </h3>
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
             <img src="img/item-8.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
-            <span class="item-price">320</span>
-            <span class="item-weight">/кг</span>
-            <a href="catalog.html">
-              <h3 class="offers-title">Сливочное с шоколадной стружкой</h3>
-            </a>
+            <div class="catalog-list-item-price">
+              <span class="item-price">320</span>
+              <span class="item-weight">/кг</span>
+            </div>
+            <h3 class="offers-title">
+              <a href="catalog.html">Сливочное с шоколадной стружкой</a>
+            </h3>
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
             <img src="img/item-9.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
-            <span class="item-price">440</span>
-            <span class="item-weight">/кг</span>
-            <a href="catalog.html">
-              <h3 class="offers-title">Сливочно-ванильное с кусочками шоколада</h3>
-            </a>
+            <div class="catalog-list-item-price">
+              <span class="item-price">440</span>
+              <span class="item-weight">/кг</span>
+            </div>
+            <h3 class="offers-title">
+              <a href="catalog.html">Сливочно-ванильное с кусочками шоколада</a>
+            </h3>
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
             <img src="img/item-10.jpg" width="267" height="267" alt="Сливочноe с ментоловым сиропом">
-            <span class="item-price">435</span>
-            <span class="item-weight">/кг</span>
-            <a href="catalog.html">
-              <h3 class="offers-title">Сливочноe с ментоловым сиропом</h3>
-            </a>
+            <div class="catalog-list-item-price">
+              <span class="item-price">435</span>
+              <span class="item-weight">/кг</span>
+            </div>
+            <h3 class="offers-title">
+              <a href="catalog.html">Сливочноe с ментоловым сиропом</a>
+            </h3>
+
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
             <img src="img/item-11.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
-            <span class="item-price">420</span>
-            <span class="item-weight">/кг</span>
-            <a href="catalog.html">
-              <h3 class="offers-title">Сливочное с кусочками черного шоколада</h3>
-            </a>
+            <div class="catalog-list-item-price">
+              <span class="item-price">420</span>
+              <span class="item-weight">/кг</span>
+            </div>
+            <h3 class="offers-title">
+              <a href="catalog.html">Сливочное с кусочками черного шоколада</a>
+            </h3>
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
             <img src="img/item-12.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
-            <span class="item-price">355</span>
-            <span class="item-weight">/кг</span>
-            <a href="catalog.html">
-              <h3 class="offers-title">Сливочное с мятным сиропом</h3>
-            </a>
+            <div class="catalog-list-item-price">
+              <span class="item-price">355</span>
+              <span class="item-weight">/кг</span>
+            </div>
+            <h3 class="offers-title">
+              <a href="catalog.html">Сливочное с мятным сиропом</a>
+            </h3>
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
         </ul>
@@ -321,45 +347,49 @@
             <a href="#">&gt;</a>
           </li>
         </ul>
+
       </section>
     </main>
     <footer class="main-footer">
       <div class="footer-social">
-        <ul>
-          <li>
+        <ul class="social-list">
+          <li class="social-item">
             <a class="social-button" href="#">Твиттер</a>
           </li>
-          <li>
+          <li class="social-item">
             <a class="social-button" href="#">Инстаграм</a>
           </li>
-          <li>
+          <li class="social-item">
             <a class="social-button" href="#">Фейсбук</a>
           </li>
-          <li>
+          <li class="social-item">
             <a class="social-button" href="#">Вконтакте</a>
           </li>
         </ul>
       </div>
-      <ul class="footer-information-list">
-        <li>
-          <a class="footer-link-information" href="#">Для поставщиков</a>
-        </li>
-        <li>
-          <a class="footer-link-information" href="#">О производстве</a>
-        </li>
-        <li>
-          <a class="footer-link-information" href="#">Наши документы</a>
-        </li>
-        <li>
-          <a class="footer-link-information" href="#">Экологические стандарты</a>
-        </li>
-      </ul>
-      <p class="footer-copyright">
+      <div class="useful-documents">
+        <ul class="footer-information-list">
+          <li class="doc-item">
+            <a class="footer-link-information for-suppliers" href="#">Для поставщиков</a>
+          </li>
+          <li class="doc-item">
+            <a class="footer-link-information" href="#">О производстве</a>
+          </li>
+          <li class="doc-item">
+            <a class="footer-link-information" href="#">Наши документы</a>
+          </li>
+          <li class="doc-item">
+            <a class="footer-link-information" href="#">Экологические стандарты</a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer-copyright">
         <a href="https://htmlacademy.ru/intensive/htmlcss">
           <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="Логотип HTML Academy">
         </a>
-        Сделано в HTML Academy ©2017
-      </p>
+        <p class="made-in">Сделано в
+          <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> © 2017</p>
+      </div>
     </footer>
   </div>
 </body>
